добавил фильтры для юзера
